--- a/2. Weather forecast - fetch api/index.html
+++ b/2. Weather forecast - fetch api/index.html
@@ -26,6 +26,9 @@
 				</div>					
 			</div>
 		</div>
-  		<script src="script.js"></script>
+  		
+  		<script src="js/model.js"></script>
+  		<script src="js/view.js"></script>  		
+		<script src="js/init.js"></script>
 	</body>
 </html>
