--- a/2. Weather forecast - fetch api/index.html
+++ b/2. Weather forecast - fetch api/index.html
@@ -27,6 +27,8 @@
 			</div>
 		</div>
   		
-  		<script src="js/script.js"></script>
+  		<script src="js/model.js"></script>
+  		<script src="js/view.js"></script>  		
+		<script src="js/init.js"></script>
 	</body>
 </html>
